# timepoint-mcp

./: .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  LICENSE  PLAN.md  README.md  pyproject.toml
app/: __main__.py  config.py  server.py
app/auth/: __init__.py  keys.py  rate_limit.py  tier.py
app/billing/: credits.py
app/clients/: billing.py  clockchain.py  flash.py  gateway.py
app/tools/: clockchain.py  clockchain_write.py
tests/: test_billing_credits.py  test_clockchain_write_auth.py  test_clockchain_write_tdf.py  test_http_mount.py  test_tier_resolver.py
